--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.0",
+    "i18next": "^25.8.13",
+    "i18next-browser-languagedetector": "^8.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.0.0",
     "react-type-animation": "^3.2.0"
   },
